# nonos-browser

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Makefile  README.md
.github/workflows/: ci.yml  release.yml
crates/nonos-crypto/src/: blake3_ops.rs  ed25519_ops.rs  encryption.rs  lib.rs  mnemonic.rs  poseidon.rs  poseidon_canonical.rs  secp256k1_ops.rs  stealth.rs  wallet_encryption.rs  zk_proofs.rs
crates/nonos-types/src/: constants.rs  lib.rs
crates/nonos-wallet/src/: account.rs  lib.rs  storage.rs  transaction.rs  wallet.rs
docs/: NONOS-Privacy-Work-Economy-Whitepaper.md
ui/: package-lock.json  package.json  vite.config.ts.timestamp-1771272038645-1f15283b6685b.mjs
ui/src/: app.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs  types.rs
ui/src-tauri/src/browser/: fetch.rs  mod.rs  navigate.rs  state.rs  tabs.rs
ui/src-tauri/src/contracts/: abi_core.rs  abi_lp.rs  abi_staking.rs  balance.rs  client.rs  commands.rs  config.rs  mod.rs  rlp.rs  rpc.rs  rpc_query.rs  rpc_send.rs  signing.rs  transaction.rs
ui/src-tauri/src/error/: contract.rs  types.rs  wallet.rs
ui/src-tauri/src/helpers/: format.rs  mod.rs  validation.rs
ui/src-tauri/src/lp_staking/: lock.rs  mod.rs  parse.rs  query.rs  rewards.rs  status.rs  types.rs
ui/src-tauri/src/network/: binary.rs  commands.rs  disconnect.rs  download.rs  health.rs  locate.rs  mod.rs  process.rs  provider.rs  start.rs  status.rs  types.rs  verify.rs
ui/src-tauri/src/node/: binary.rs  lifecycle.rs  mod.rs  peers.rs  status.rs
ui/src-tauri/src/privacy/: cache.rs  identity.rs  mod.rs  stats.rs  tracking.rs  types.rs
ui/src-tauri/src/proxy/: mod.rs  session.rs
ui/src-tauri/src/proxy/rewrite/: action.rs  attr.rs  config.rs  css.rs  meta.rs  mod.rs  script.rs  srcset.rs  strip.rs  url.rs
ui/src-tauri/src/proxy/server/: config.rs  css.rs  handler.rs  mod.rs  response.rs  security.rs
ui/src-tauri/src/proxy/socks/: config.rs  fetch.rs  http.rs  mod.rs  parse.rs
ui/src-tauri/src/staking/: commands.rs  mod.rs  status.rs  types.rs
ui/src-tauri/src/state/: browser.rs  mod.rs  network.rs  node.rs  types.rs  wallet.rs
ui/src-tauri/src/wallet/: auth.rs  create.rs  mod.rs  network_select.rs  query.rs  send.rs  send_eth.rs  send_nox.rs  state.rs  status.rs
ui/src-tauri/src/work_metrics/: commands.rs  fetch.rs  mod.rs  scoring.rs  types.rs
ui/src/lib/components/: Sidebar.svelte  TopBar.svelte
ui/src/lib/docs/: ArchitectureDoc.svelte  DocNav.svelte  EconomyDoc.svelte  NymDoc.svelte  StakingDoc.svelte  index.ts
ui/src/lib/network/: ArchitectureVisual.svelte  CircuitsList.svelte  ConnectionCard.svelte  ConnectionStats.svelte  NymInfo.svelte  StatusBadge.svelte  index.ts  types.ts
ui/src/lib/node/: EconomyInfo.svelte  FeeDistribution.svelte  NodeStatus.svelte  StakeForm.svelte  WorkCategories.svelte  index.ts
ui/src/lib/privacy/: ActiveSessions.svelte  EconomyInfo.svelte  NodesPanel.svelte  ServiceCard.svelte  StatsBar.svelte  index.ts  types.ts
ui/src/lib/sidebar/: NavItem.svelte  SidebarFooter.svelte  SidebarLogo.svelte  StatusPanel.svelte  index.ts
ui/src/lib/staking/: EmissionInfo.svelte  EpochProgress.svelte  LPStaking.svelte  LPSummary.svelte  LockForm.svelte  LocksList.svelte  RewardCard.svelte  RewardsBreakdown.svelte  RewardsPanel.svelte  TierSelector.svelte  WorkCategoriesGrid.svelte  WorkDetailsGrid.svelte  WorkMetricsPanel.svelte  WorkScoreCard.svelte  index.ts
ui/src/lib/styles/: animations.css  cyberpunk.css
ui/src/lib/topbar/: IdentityButton.svelte  NavControls.svelte  SecurityBadge.svelte  UrlBar.svelte  WalletPill.svelte  index.ts
ui/src/lib/wallet/: AddressCard.svelte  AddressDisplay.svelte  BalanceCard.svelte  BalanceCards.svelte  Blake3Card.svelte  CreateWalletCard.svelte  ImportWalletCard.svelte  MnemonicDisplay.svelte  MnemonicWords.svelte  NetworkSwitcher.svelte  QRCodeDisplay.svelte  ReceiveModal.svelte  SecurityInfo.svelte  SendForm.svelte  SendModal.svelte  StakingStats.svelte  (+7 more)
ui/src/routes/: +page.svelte
(+16 files in other folders)
