[workspace]
resolver = "2"
members = [
    "crates/nonos-types",
    "crates/nonos-crypto",
    "crates/nonos-wallet",
    "ui/src-tauri",
]

[workspace.package]
version = "1.0.5"
edition = "2021"
authors = ["NONOS Team <team@nonos.systems>"]
license = "AGPL-3.0"
repository = "https://github.com/NON-OS/nonos-browser"
homepage = "https://nonos.systems"
documentation = "https://docs.nonos.systems"
keywords = ["privacy", "browser", "mixnet", "nym", "wallet"]
categories = ["cryptography", "network-programming"]
rust-version = "1.75.0"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

blake3 = "1.5"
secp256k1 = { version = "0.29", features = ["rand", "recovery", "serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["serde"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
argon2 = "0.5"
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1.7", features = ["derive"] }
subtle = "2.5"

bip39 = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
base64 = "0.21"

reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

thiserror = "1.0"
anyhow = "1.0"

uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }

ark-ff = { version = "0.4", features = ["std"] }
ark-ec = { version = "0.4", features = ["std"] }
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-serialize = { version = "0.4", features = ["derive"] }
ark-std = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["snark", "sponge"] }

proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ethers = { version = "2.0", features = ["legacy", "ws"] }
sled = "0.34"

nonos-types = { path = "crates/nonos-types" }
nonos-crypto = { path = "crates/nonos-crypto" }
nonos-wallet = { path = "crates/nonos-wallet" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.release-debug]
inherits = "release"
debug = true
strip = false
