[package]
name = "nonos-app"
version = "1.0.6"
description = "NONOS Ecosystem - Zero-trust privacy browser powered by Nym Mixnet"
authors = ["NON-OS <team@nonos.systems>"]
license = "AGPL-3.0"
repository = "https://github.com/NON-OS/nonos-browser"
homepage = "https://nonos.systems"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process", "io-util", "time", "sync", "fs", "net"] }
dirs = "5.0"
urlencoding = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["socks", "rustls-tls", "json", "http2", "charset"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio-socks = "0.5"
native-tls = "0.2"
tokio-native-tls = "0.3"
flate2 = "1.0"
url = "2.5"
regex = "1.10"
bip39 = "2.1"
tiny-keccak = { version = "2.0", features = ["keccak"] }
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
lazy_static = "1.4"
uuid = { version = "1", features = ["v4"] }
nonos-crypto = { workspace = true }
nonos-types = { workspace = true }
nonos-wallet = { workspace = true }
zeroize = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
